--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
-
     testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
-    testCompile("org.mockito:mockito-core:2.23.4")
+    compile("org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion")
+    compile("mysql:mysql-connector-java:6.0.6")
 }
 
 bootRun.environment([
@@ -37,9 +37,6 @@ bootRun.environment([
 test.environment([
      "WELCOME_MESSAGE": "Hello from test",
 ])
-
-    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
-}
 
 bootRun.environment([
         "WELCOME_MESSAGE": "hello",
